--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,81 +23,10 @@ ol {
   list-style: decimal;
 }
 
-/* React Select Custom */
-.react-select > div:nth-child(3) {
-  cursor: pointer !important;
-  min-height: 30px !important;
-  background-color: unset !important;
-  border-color: unset !important;
-  border-radius: unset !important;
-  border-style: unset !important;
-  border-width: unset !important;
-  box-shadow: unset !important;
-}
-.react-select > div:nth-child(3) > div:first-child {
-  padding: 0px 8px !important;
-}
-.react-select > div:nth-child(3) > div:first-child > div:last-child {
-  margin: 0px;
-  padding-bottom: 0px;
-  padding-top: 0px;
-}
-
-.react-select > div:nth-child(3) > div:last-child > div {
-  padding: 4px;
-}
-
-.react-select > div:nth-child(4) {
-  z-index: 11;
-}
-
-.react-select > div:nth-child(4) > div::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 4px rgba(0, 0, 0, 0.3);
-  background-color: #f5f5f5;
-}
-
-.react-select > div:nth-child(4) > div::-webkit-scrollbar {
-  width: 4px;
-  background-color: #f5f5f5;
-}
-
-.react-select > div:nth-child(4) > div::-webkit-scrollbar-thumb {
-  background-color: #949494;
-}
-
-/* Rich Text */
-figure {
-  max-width: fit-content;
-  margin: 20px auto;
-  text-align: center;
-}
-figcaption {
-  font-style: italic;
-  font-size: 13px;
-  padding: 7px 10px;
-  background-color: #bed3dd;
-  color: #484848;
-}
-
-.custom-iframe iframe {
-  margin: auto;
-}
-
-@media only screen and (max-width: 600px) {
-  .custom-iframe iframe {
-    width: 100%;
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px;
+    margin-left: auto;
+    margin-right: auto;
   }
-}
-
-.article-thumbnail {
-  position: relative;
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  max-height: 80px;
-}
-
-.article-thumbnail p {
-  display: inline;
 }
