--- a/styles/globals.css
+++ b/styles/globals.css
@@ -22,6 +22,12 @@ ul {
 ol {
   list-style: decimal;
 }
+.container {
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 100%;
+  max-width: 100%;
+}
 
 @media (min-width: 1200px) {
   .container {
