--- a/styles/customs.css
+++ b/styles/customs.css
@@ -8,7 +8,22 @@
 .description ul {
   padding-left: 15px;
 }
-
+.description h1,
+.description h2,
+.description h3,
+.description h4,
+.description h5,
+.description h6 {
+  color: var(--primary);
+  letter-spacing: 1px;
+  font-size: 20px;
+  margin-bottom: 20px;
+  font-weight: 500;
+}
+.description iframe {
+  width: 100%;
+  height: 400px;
+}
 .description li {
   margin-bottom: 5px;
 }
