--- a/styles/customs.css
+++ b/styles/customs.css
@@ -22,7 +22,14 @@
 }
 .description iframe {
   width: 100%;
-  height: 400px;
+  min-height: 400px;
+}
+.description table td {
+  padding: 10px;
+  color: #000;
+}
+.description table tr:not(:last-of-type) {
+  border-bottom: 1px solid #ccc;
 }
 .description li {
   margin-bottom: 5px;
