--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,14 @@ body {
   --secondary2: "#d4bebe";
 }
 
+.carousel-gallery * {
+  line-height: 0;
+}
+
 @layer utilities {
+  p {
+    line-height: 27px;
+  }
   .react-select {
     text-transform: uppercase;
   }
@@ -29,10 +36,6 @@ body {
   .connections .even img {
     max-width: 65px;
   }
-  * {
-    line-height: 27px;
-  }
-
   ul {
     list-style: disc;
   }
@@ -83,6 +86,7 @@ body {
   .book-modal .modal-content {
     animation: modalIn 0.3s;
   }
+
   .slide-fill .slick-list,
   .slide-fill .slick-list div {
     height: 100% !important;
