--- a/styles/globals.css
+++ b/styles/globals.css
@@ -178,7 +178,6 @@
 
 .children {
   position: fixed;
-  height: calc(100vh - 80px);
   overflow-y: auto;
   opacity: 0;
   visibility: hidden;
@@ -208,4 +207,32 @@
   100% {
     transform: scale(1);
   }
+}
+
+@keyframes wobble {
+  0% {
+    transform: translateX(0%);
+  }
+  15% {
+    transform: translateX(-25%) rotate(-5deg);
+  }
+  30% {
+    transform: translateX(20%) rotate(3deg);
+  }
+  45% {
+    transform: translateX(-15%) rotate(-3deg);
+  }
+  60% {
+    transform: translateX(10%) rotate(2deg);
+  }
+  75% {
+    transform: translateX(-5%) rotate(-1deg);
+  }
+  100% {
+    transform: translateX(0%);
+  }
+}
+
+.animate-wobble {
+  animation: wobble 1s;
 }
