--- a/styles/globals.css
+++ b/styles/globals.css
@@ -272,3 +272,10 @@
 #CookiebotWidgetUnderlay {
   z-index: 9 !important;
 }
+#CookiebotWidget #CookiebotWidget-buttons #CookiebotWidget-btn-withdraw,
+#CookiebotWidget-btn-change {
+  border-color: var(--primary) !important;
+}
+#CookiebotWidget-widgetContent path {
+  fill: var(--primary) !important;
+}
