--- a/styles/globals.css
+++ b/styles/globals.css
@@ -33,7 +33,7 @@
 }
 
 .carousel-gallery .slick-slide {
-  margin-left: 15px;
+  margin-left: 10px;
 }
 
 .carousel-gallery .slick-list {
@@ -77,6 +77,13 @@
   .react-select > div {
     border: 1px solid var(--dropdownBorder) !important;
     outline: none;
+    border-radius: 0;
+    min-height: 60px;
+    outline: none;
+    box-shadow: none !important;
+    font-size: 18px;
+    font-family: "Tenor", sans-serif;
+    letter-spacing: 1px;
   }
   .react-select > div > div:nth-child(2) > span {
     display: none;
