--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,17 @@
   --dropdownBorder: #ebbbc9;
 }
 
+#header .active::after {
+  content: "";
+  width: 100%;
+  height: 3px;
+  background: var(--primary);
+  display: block;
+  flex: 0 0 100%;
+  position: absolute;
+  bottom: -5px;
+}
+
 .font-domine {
   font-family: "Domine", sans-serif;
 }
@@ -133,7 +144,7 @@
       max-width: 980px;
     }
     .st-2 .container {
-      max-width: 1140px;
+      max-width: 1200px;
     }
   }
 }
