--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -6,4 +6,9 @@
   font-size: 20px;
   font-weight: 500;
   margin-bottom: 30px;
+  font-family: "Tenor" !important;
+}
+
+.description * {
+  font-family: "Montserrat" !important;
 }
