--- a/styles/backtop.module.css
+++ b/styles/backtop.module.css
@@ -1,5 +1,5 @@
 .backTop button {
-  padding: 15px 20px;
+  padding: 10px 15px;
   border-radius: 5px;
   color: #fff;
   background-color: #b88e21;
@@ -12,4 +12,10 @@
   bottom: 10px;
   right: 10px;
   position: fixed;
+}
+
+.invisible {
+  opacity: 0;
+  visibility: hidden;
+  transition: all ease 0.3s;
 }
