--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -1,9 +1,8 @@
-.description h1,
-.description h2,
-.description h3 {
+.description :is(h1, h2, h3),
+.description :is(h1, h2, h3) * {
   color: var(--primary);
   letter-spacing: 1px;
-  font-size: 20px;
+  font-size: 20px !important;
   font-weight: 500;
   margin-bottom: 30px;
   font-family: "Tenor" !important;
@@ -11,4 +10,19 @@
 
 .description * {
   font-family: "Montserrat" !important;
+  font-size: 16px !important;
+  line-height: 21px !important;
+}
+
+.description p {
+  margin-bottom: 15px !important;
+}
+
+.description :has(h1, h2, h3) * {
+  color: inherit !important;
+  letter-spacing: inherit !important;
+  font-size: inherit !important;
+  font-weight: inherit !important;
+  margin-bottom: inherit !important;
+  font-family: inherit !important;
 }
