--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -13,6 +13,10 @@
   font-size: 16px !important;
   line-height: 21px !important;
 }
+.description a:not(.button) {
+  color: var(--primary);
+  text-decoration: underline;
+}
 
 .description p {
   margin-bottom: 15px !important;
