--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -9,7 +9,7 @@
 }
 
 .description * {
-  font-family: "Montserrat" !important;
+  font-family: "Gotham", sans-serif !important;
   font-size: 16px !important;
   line-height: 21px !important;
 }
