--- a/styles/globals.css
+++ b/styles/globals.css
@@ -404,3 +404,15 @@ p {
   2sm:min-h-[250px]
   object-cover;
 }
+
+.popupCarousel .slick-arrow {
+  background: var(--primary);
+  @apply rounded-full flex text-[0px] top-0 absolute items-center justify-center p-[10px] z-[20] w-[30px] h-[30px] md:w-[50px] md:h-[50px];
+}
+
+.popupCarousel .slick-prev {
+  @apply left-auto right-[40px] md:right-[60px];
+}
+.popupCarousel .slick-next {
+  @apply right-0;
+}
