--- a/styles/description.module.css
+++ b/styles/description.module.css
@@ -5,9 +5,11 @@
   min-height: 400px;
   width: 100%;
 }
+.description h1,
 .description h2,
-.description h3 {
-  font-size: 20px;
+.description h3,
+.description h4 {
+  font-size: 22px;
   color: var(--primary);
   margin-bottom: 20px;
   letter-spacing: 1px;
