--- a/styles/backtop.module.css
+++ b/styles/backtop.module.css
@@ -1,8 +1,7 @@
 .backTop button {
   padding: 10px 15px;
-  border-radius: 5px;
   color: #fff;
-  background-color: #b88e21;
+  background-color: #a79378;
   font-weight: 700;
   text-decoration: none;
   transition: all ease 0.3s;
