--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
 :root {
   --primary: #691a31;
   --primary1: #85764d;
-  --secondary: #86764e;
+  --secondary: #654e43;
   --secondary1: #c5baa6;
   --secondary2: #d4bebe;
   --secondary3: #99656a;
