--- a/styles/ButtonsRepeater.module.css
+++ b/styles/ButtonsRepeater.module.css
@@ -2,6 +2,9 @@
   max-width: fit-content;
   margin: 0 auto;
 }
+.buttonRepeater em {
+  background-color: unset !important;
+} 
 .buttonRepeater * {
   font-family: "Gotham", sans-serif !important;
 }
@@ -10,7 +13,7 @@
     border-right: 1px solid #ccc;
   }
 }
-
+ 
 @media (max-width: 767px) {
   .buttonRepeater > div:not(:last-of-type) {
     border-bottom: 1px solid #ccc;
