--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,6 +14,9 @@
 body {
   font-family: "Gotham", sans-serif;
 }
+.react-datepicker-wrapper {
+  width: 100%; 
+}
 
 .st-1 #header .active::after {
   content: "";
@@ -94,6 +97,7 @@ body {
     display: none;
   }
 
+ 
   .connections .even img {
     max-width: 65px;
   }
