--- a/styles/description.module.css
+++ b/styles/description.module.css
@@ -27,6 +27,9 @@
   margin-bottom: 15px;
   font-family: "Gotham", sans-serif !important;
 }
+.description span {
+  font-family: "Gotham", sans-serif !important;
+}
 .description strong {
   margin-bottom: 20px;
   font-weight: 500 !important;
