--- a/styles/description.module.css
+++ b/styles/description.module.css
@@ -34,9 +34,9 @@
   margin-bottom: 20px;
   font-weight: 500 !important;
 }
-.description img {
+/* .description img {
   margin: 0 auto;
-}
+} */
 .description li {
   font-size: 14px;
   line-height: 21px;
