--- a/styles/blog.module.css
+++ b/styles/blog.module.css
@@ -1,10 +1,12 @@
 .description :is(h1, h2, h3),
-.description :is(h1, h2, h3) * {
-  color: var(--primary);
+.description :is(h1, h2, h3) *,
+.description :is(h1, h2, h3) span *,
+.description :is(h1, h2, h3) strong * {
+  color: var(--primary) !important;
   letter-spacing: 1px;
   font-size: 20px !important;
   font-weight: 500;
-  margin-bottom: 30px;
+  margin-bottom: 30px !important;
   font-family: "Tenor" !important;
 }
 
@@ -21,6 +23,10 @@
 
 .description p {
   margin-bottom: 15px !important;
+  overflow: hidden;
+}
+.description span {
+  color: #555 !important;
 }
 
 .description :has(h1, h2, h3) * {
