chore: juicer adjustments

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -577,15 +577,20 @@ p {
   content: counters(section, "") "";
 }
 
-.st-2 .juicer-feed.modern .j-text {
-  @apply text-[#fff] bg-[#1f1f1f];
+.st-2 .juicer-feed.modern .j-text,
+.juicer-feed.modern .j-message {
+  @apply !text-[#fff] bg-[#1f1f1f];
 }
 .st-2 .juicer-feed.modern .j-text a {
   @apply text-[#fff];
 }
 
 .st-2 .juicer-feed.modern .j-poster {
-  @apply bg-[#000] bg-opacity-60;
+  @apply bg-[#000] bg-opacity-60 absolute top-0 left-0 w-full z-[1];
+}
+
+.st-2 .juicer-feed.modern .j-message a {
+  @apply !underline;
 }
 .st-2 .juicer-feed.modern .j-poster a,
 .st-2 .juicer-feed.modern .j-poster h3,
