--- a/styles/globals.css
+++ b/styles/globals.css
@@ -586,7 +586,7 @@ p {
 }
 
 .juicer-feed.modern .j-image img {
-  @apply md:h-[300px] object-cover;
+  @apply md:!h-[300px] object-cover;
 }
 .st-2 .juicer-feed.modern .j-poster {
   @apply bg-[#000] bg-opacity-60 absolute bottom-0 left-0 w-full z-[1];
