--- a/styles/globals.css
+++ b/styles/globals.css
@@ -175,6 +175,12 @@ body {
     .st-2 .container {
       max-width: 1200px;
     }
+    .site-id-7 .container {
+      max-width: 980px;
+    }
+    .site-id-8 .container {
+      max-width: 980px;
+    }
   }
 }
 
